syntax = "proto3";

option go_package = "genproto/voting/";

package voting;


service PublicService {
  rpc CreatePublic(CreatePublicRequest) returns (VoidPublicResponse) {}
  rpc GetByIdPublic(ByIdPublicRequest) returns (GetPublicResponse) {}
  rpc GetAllPublic(FilterPublicRequest) returns (GetAllPublicResponse) {}
  rpc UpdatePublic(GetPublicResponse) returns (VoidPublicResponse) {}
  rpc DeletePublic(ByIdPublicRequest) returns (VoidPublicResponse) {}
}

message CreatePublicRequest {
    string id         = 1;
    string first_name = 2;
    string last_name  = 3;
    string birthday   = 4;
    string gender     = 5;
    string nation     = 6;
    string party_id   = 7;
}

message VoidPublicResponse {}

message ByIdPublicRequest {
    string id = 1;
}

message GetPublicResponse {
    string id = 1;
    string first_name = 2;
    string last_name  = 3;
    string birthday   = 4;
    string gender     = 5;
    string nation     = 6;
    string party_id   = 7;
}

message UpdatePublicRequest {
    string first_name = 1;
    string last_name  = 2;
    string birthday   = 3;
    string gender     = 4;
    string nation     = 5;
    string party_id   = 6;
}

message FilterPublicRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message GetAllPublicResponse {
    repeated GetPublicResponse publics = 1;
}
